# tp3_aos

./: CUDA_KERNEL_EXPLANATION.md  DOCKER_DEPLOYMENT.md  Dockerfile  Jenkinsfile  check_implementation.py  cuda_test.py  docker-compose.yml  main.py  matrix1.npz  matrix2.npz  pyproject.toml  requirements.txt  start_service.sh  test_api.py  test_service.py
